--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-regex==2023.10.3
-numpy==1.26.2
-scipy==1.11.4
-pandas==2.1.4
+numpy==2.1.1
+pandas==2.2.3
+python-dateutil==2.9.0.post0
+pytz==2024.2
+regex==2024.9.11
+scipy==1.14.1
+six==1.16.0
+tzdata==2024.2
